Fix overflow in dat network activity

--- a/app/stylesheets/builtin-pages/components/dat-network-activity.less
+++ b/app/stylesheets/builtin-pages/components/dat-network-activity.less
@@ -64,7 +64,7 @@
     border-left: 0;
 
     .title {
-      width: 338px;
+      width: 330px;
     }
 
     .peers,
